@@ -31,11 +31,14 @@
 #include "dirname.h"
 
 #include "gettext.h"
+#include <locale.h>
 #define _(String) gettext (String)
 
 #include <getopt.h>
 
 #include "manconfig.h"
+
+#include "error.h"
 #include "globbing.h"
 
 char *program_name;
@@ -76,6 +79,13 @@ int main (int argc, char **argv)
 	int match_case = 0;
 
 	program_name = base_name (argv[0]);
+
+	if (!setlocale (LC_ALL, ""))
+		/* Obviously can't translate this. */
+		error (0, 0, "can't set the locale; make sure $LC_* and $LANG "
+			     "are correct");
+	bindtextdomain (PACKAGE, LOCALEDIR);
+	textdomain (PACKAGE);
 
 	while ((c = getopt_long (argc, argv, args,
 				 long_options, NULL)) != -1) {
