@@ -1,3 +1,9 @@
+Mon Nov 12 19:24:00 GMT 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/accessdb.c (main), src/globbing_test.c (main),
+	  src/lexgrog_test.c (main), src/zsoelim.l (main): Enable
+	  localisation (Debian bug #448395).
+
 Sun Nov 11 05:43:16 GMT 2007  Colin Watson  <cjwatson@debian.org>
 
 	* configure.ac: Issue a useful error message if
